update and make log

--- a/富种起源/simulate1.ipynb
+++ b/富种起源/simulate1.ipynb
@@ -91,133 +91,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "a must be 1-dimensional",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_26600/3689596356.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mp\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mright\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mgrid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mnew_grid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdown\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;31m# 处理边界\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: a must be 1-dimensional"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "# failed example\n",
+    "\n",
+    "\n",
     "\n",
     "# 初始化200*200随机数组\n",
-    "grid = np.random.rand(200, 200)  \n",
-    "# 同上代码初始化grid\n",
+    "# grid = np.random.rand(200, 200)  \n",
     "\n",
-    "for i in range(20):\n",
+    "# # 计算概率矩阵 \n",
+    "# up = np.roll(grid, -1, axis=0)  \n",
+    "# down = np.roll(grid, 1, axis=0)\n",
+    "# left = np.roll(grid, -1, axis=1) \n",
+    "# right = np.roll(grid, 1, axis=1)\n",
     "\n",
-    "  # 计算概率矩阵\n",
-    "    up = np.roll(grid, -1, axis=0)\n",
-    "    down = np.roll(grid, 1, axis=0) \n",
-    "    left = np.roll(grid, -1, axis=1)\n",
-    "    right = np.roll(grid, 1, axis=1)\n",
+    "# p = up / (up + grid)\n",
+    "# p += down / (down + grid)\n",
+    "# p += left / (left + grid)\n",
+    "# p += right / (right + grid)\n",
     "\n",
-    "    p = up / (up + grid)\n",
-    "    p += down / (down + grid)\n",
-    "    p += left / (left + grid)\n",
-    "    p += right / (right + grid)\n",
-    "    p = p.flatten() \n",
-    "    new_grid = np.random.choice([up, down, left, right], p=p/p.sum(axis=0))\n",
-    "    \n",
-    "    # 处理边界\n",
-    "    new_grid[0,:] = grid[0,:]   \n",
-    "    new_grid[-1,:] = grid[-1,:]\n",
-    "    new_grid[:,0] = grid[:,0]\n",
-    "    new_grid[:,-1] = grid[:,-1]\n",
+    "# # 用probability矩阵按概率替换中心点\n",
+    "# new_grid = np.random.choice([up, down, left, right], p=p/p.sum(axis=0))\n",
     "\n",
-    "    grid = new_grid\n",
+    "# # 处理边界 \n",
+    "# new_grid[0,:] = grid[0,:]  \n",
+    "# new_grid[-1,:] = grid[-1,:]\n",
+    "# new_grid[:,0] = grid[:,0]\n",
+    "# new_grid[:,-1] = grid[:,-1]\n",
     "\n",
-    "  # 画图\n",
-    "    plt.imshow(grid)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "'a' and 'p' must have same size",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_26600/3487952609.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mshape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mnew_grid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mnew_grid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_grid\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_grid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mnew_grid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_grid\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdown\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_grid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: 'a' and 'p' must have same size"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# 初始化200*200随机数组\n",
-    "grid = np.random.rand(200, 200)  \n",
-    "\n",
-    "# 计算概率矩阵 \n",
-    "up = np.roll(grid, -1, axis=0)  \n",
-    "down = np.roll(grid, 1, axis=0)\n",
-    "left = np.roll(grid, -1, axis=1) \n",
-    "right = np.roll(grid, 1, axis=1)\n",
-    "\n",
-    "p = up / (up + grid)\n",
-    "p += down / (down + grid)\n",
-    "p += left / (left + grid)\n",
-    "p += right / (right + grid)\n",
-    "p = grid / (up + grid + down + grid + left + grid + right) \n",
-    "p = p.flatten()\n",
-    "# 用probability矩阵按概率替换中心点\n",
-    "p = grid / (up + grid + down + grid + left + grid + right)\n",
-    "p = p.flatten() \n",
-    "\n",
-    "shape = (grid.shape[0], grid.shape[1])\n",
-    "new_grid = np.random.choice(4, p=p/p.sum(), size=shape)\n",
-    "new_grid = np.where(new_grid==0, up, new_grid) \n",
-    "new_grid = np.where(new_grid==1, down, new_grid)\n",
-    "new_grid = np.where(new_grid==2, left, new_grid)  \n",
-    "new_grid = np.where(new_grid==3, right, new_grid)\n",
-    "\n",
-    "# 处理边界 \n",
-    "new_grid[0,:] = grid[0,:]  \n",
-    "new_grid[-1,:] = grid[-1,:]\n",
-    "new_grid[:,0] = grid[:,0]\n",
-    "new_grid[:,-1] = grid[:,-1]\n",
-    "\n",
-    "grid = new_grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.07957899, 0.17008035, 0.16957645, ..., 0.01682886, 0.09982284,\n",
-       "       0.04275356])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p"
+    "# grid = new_grid"
    ]
   }
  ],
